--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,18 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ritesh's Arth</title>
+    <script>
+  (function() {
+    try {
+      const t = localStorage.getItem('theme')
+             || (matchMedia('(prefers-color-scheme: dark)').matches
+                 ? 'dark'
+                 : 'light');
+      if (t === 'dark') document.documentElement.classList.add('dark');
+    } catch {}
+  })();
+</script>
+
   </head>
   <body>
     <div id="root"></div>
