Modification in Dashboard cum Profile page and fixing common Theme Toggler

--- a/client/index.html
+++ b/client/index.html
@@ -6,16 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ritesh's Arth</title>
     <script>
-  (function() {
-    try {
-      const t = localStorage.getItem('theme')
-             || (matchMedia('(prefers-color-scheme: dark)').matches
-                 ? 'dark'
-                 : 'light');
-      if (t === 'dark') document.documentElement.classList.add('dark');
-    } catch {}
-  })();
-</script>
+      // Prevent theme flickering by applying theme immediately
+      (function() {
+        try {
+          const saved = localStorage.getItem('theme');
+          const theme = saved || (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light');
+          document.documentElement.classList.add(theme);
+          document.body.classList.add(theme + '-theme');
+        } catch (e) {
+          // Fallback to light theme if localStorage is not available
+          document.documentElement.classList.add('light');
+          document.body.classList.add('light-theme');
+        }
+      })();
+    </script>
 
   </head>
   <body>
